fix: Corrigido bug na validação de formulário e refatorado CSS para melhorar legibilidade e organização.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,7 +106,7 @@ a {
   display: block;
   position: relative;
   padding-left: 35px;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
   cursor: pointer;
   font-size: 16px;
   -webkit-user-select: none;
@@ -115,7 +115,6 @@ a {
   user-select: none;
   color: #f5f5f0;
   flex-wrap: wrap;
-  width: 200px;
 }
 
 /* Hide the browser's default radio button */
